50-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-demo
  labels:
    app: log-demo
spec:
  selector:
    app: log-demo
  ports:
    - name: http
      port: 8080
      targetPort: http
